data succesfully send to client side

--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "the-news-dragon-server",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -12,5 +11,15 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.18.2"
-  }
+  },
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/zulfikar2022/the-news-dragon-server.git"
+  },
+  "bugs": {
+    "url": "https://github.com/zulfikar2022/the-news-dragon-server/issues"
+  },
+  "homepage": "https://github.com/zulfikar2022/the-news-dragon-server#readme",
+  "description": ""
 }
